# handoutify

./: .qovery.yml  Cargo.toml  Dockerfile  README.md
src/: lib.rs
templates/: index.html
