[package]
name = "handoutify"
version = "0.1.0"
authors = ["Nils <nils@nilsand.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26.0"
actix-web = "3.3.1"
actix-multipart = "0.3.0"
askama = { version = "0.10.5", features = ["with-actix-web"] }
askama_actix = "0.11.1"
futures = "0.3.8"
