[package]
name = "handoutify"
version = "0.1.0"
authors = ["Nils <nils@nilsand.re>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lopdf = { version = "0.26.0", features = ["nom_parser"] }
actix-web = "3.3.1"
actix-multipart = "0.3.0"
askama = { version = "0.10.5", features = ["with-actix-web"] }
askama_actix = "0.11.1"
env_logger = "0.8.2"
futures = "0.3.8"
